# bld.ai-Backend

./: DataBase.db  README.md  db.sqlite3  main.py  pyproject.toml
config/: settings.py  urls.py
endpoint/: forms.py  models.py  serializers.py  urls.py  views.py
endpoint/migrations/: 0001_initial.py  0002_alter_parent_id_alter_student_id_alter_subject_id.py  0003_alter_parent_id_alter_student_id_alter_subject_id.py
product/: apps.py  models.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_student_email_alter_student_id.py  0003_alter_student_class.py  0004_alter_student_class.py  0005_alter_student_table.py
server/: settings.py  urls.py
users/: data.json  urls.py  views.py
