[tool.poetry]
name = "bld-ai-backend"
version = "0.1.0"
description = ""
authors = ["Amir Moris <amir.moris35@gmail.com>"]
readme = "README.md"
packages = [{include = "bld"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
